Fix navbar jumping

--- a/css/styles.css
+++ b/css/styles.css
@@ -11012,7 +11012,7 @@ body {
 #mainNav .navbar-brand {
   color: #000;
   font-weight: 700;
-  padding: 0.9rem 0;
+  /* padding: 0.9rem 0; */
 }
 #mainNav .navbar-nav .nav-item:hover {
   color: fade(#fff, 80%);
@@ -11037,7 +11037,8 @@ body {
   }
   #mainNav .nav-link {
     transition: none;
-    padding: 2rem 1.5rem;
+    /* padding: 2rem 1.5rem; */
+    padding: 1.5rem 1.5rem 1.25rem;
     color: rgba(255, 255, 255, 0.5);
   }
   #mainNav .nav-link:hover {
@@ -11058,7 +11059,7 @@ body {
   }
   #mainNav.navbar-shrink .nav-link {
     color: #000;
-    padding: 1.5rem 1.5rem 1.25rem;
+    /* padding: 1.5rem 1.5rem 1.25rem; */
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
